--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,6 @@
 index:
     path: /
-    controller: App\Controller\DefaultController::index
+    controller: App\Controller\ProductController::index
 
 message:
     path: /bonjour/{nom}/{age}
